--- a/styles/style.css
+++ b/styles/style.css
@@ -1,39 +1,63 @@
 :root {
-  --primary-color: blue;
+  --font-fm: "Nunito", sans-serif;
 }
-h1,
-h2,
-h3 {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+body {
+  font-family: var(--font-fm);
 }
+/*============
+     navbar
+  ============*/
+.Recipe-navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1160px;
+  margin: 48px 140px 62px 140px;
+  border: 1px red solid;
+}
+.Recipe-navbar-nav {
+  margin-left: 40px;
+}
+.Recipe-navbar-brand a {
+  font-size: 24px;
+  font-weight: 800;
+  text-decoration: none;
+  color: rgba(39, 33, 66, 1);
+}
+.Recipe-navbar-nav a {
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  color: rgba(39, 33, 66, 1);
+  margin-left: 10px;
+}
+a.active {
+  color: rgba(102, 46, 237, 1);
+}
+/*============
+      hero
+  ============*/
 .hero {
-  background-image: url("image/website-hw4.svg");
   text-align: center;
-  padding: 47px auto;
-  margin: 48px 0 100px 0;
+  margin: 62px 0 100px 0;
+  padding: 47px 0;
+  color: #ffffff;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("/image/bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero h1 {
-  color: black;
   font-size: 72px;
   font-weight: 700;
-  line-height: 95.21 px;
-  margin-bottom: 0;
 }
 .hero h2 {
   font-size: 24px;
   font-weight: 700px;
-  line-height: 35px;
-  margin: 0;
-}
-.collection-btn-section {
-  margin-top: 45px;
-}
-.collection-btn {
-  background-color: deeppink;
-  color: white;
-  text-decoration: none;
-  padding: 15px 13px;
-}
-body {
+  margin-top: 4px;
 }
