--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 }
 body {
   font-family: var(--font-fm);
+  color: rgba(39, 33, 66, 1);
 }
 /*============
      navbar
@@ -35,11 +36,11 @@ a.active {
   color: rgba(102, 46, 237, 1);
 }
 /*============
-      hero
+      hero 
   ============*/
 .hero {
   text-align: center;
-  margin: 62px 0 100px 0;
+  margin-top: 62px;
   padding: 47px 0;
   color: #ffffff;
   background-image: linear-gradient(
@@ -60,4 +61,24 @@ a.active {
   font-size: 24px;
   font-weight: 700px;
   margin-top: 4px;
+}
+/*=========================
+     تصویر غذا و عنوان
+==========================*/
+.container {
+  margin: 100px 140px;
+  padding: 0;
+  max-width: 1160px;
+}
+.article {
+  margin: 0 20px;
+}
+.roww {
+  display: flex;
+  justify-content: space-around;
+}
+h3.article-title {
+  font-size: 28px;
+  font-weight: 700;
+  margin-top: 20px;
 }
