added about page file

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,3 +99,6 @@ footer {
 .copyright p {
   color: var(--secondray-color);
 }
+/*=====================================
+         about me
+=====================================*/
