--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: var(--font-fm);
   color: var(--secondray-color);
+  margin: 0;
 }
 /*============
      navbar
@@ -14,15 +15,15 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1160px;
-  margin: 48px 140px 62px 140px;
+  max-width: 1160px;
+  margin: 48px auto 62px auto;
 }
 .Recipe-navbar-nav {
   margin-left: 40px;
 }
 .Recipe-navbar-brand a {
   font-size: 32px;
-  font-weight: 800;
+  font-weight: 900;
   text-decoration: none;
   color: var(--secondray-color);
 }
@@ -68,9 +69,8 @@ a.active {
      تصویر غذا و عنوان
 ==========================*/
 .container {
-  margin: 50px 140px;
+  margin: 50px auto;
   padding: 0;
-  max-width: 1160px;
 }
 .article {
   margin: 0 20px;
@@ -100,5 +100,60 @@ footer {
   color: var(--secondray-color);
 }
 /*=====================================
-         about me
+        media query
 =====================================*/
+@media (max-width: 900px) {
+  .Recipe-navbar {
+    flex-direction: column;
+    width: 100%;
+    margin: 24px 0 12px 0;
+  }
+  .Recipe-navbar-nav {
+    text-align: center;
+    margin: 20px 0 0 0;
+  }
+  .Recipe-navbar-nav a:first-child {
+    margin-left: 0;
+  }
+  .hero {
+    margin: 28px 0px 30px 0px;
+    padding: 47px 0;
+  }
+  .hero h1 {
+    font-size: 40px;
+    margin-bottom: 2px;
+  }
+  .hero h2 {
+    font-size: 12px;
+  }
+
+  .container {
+    padding: 0;
+    margin: 20px auto;
+    max-width: 60%;
+  }
+  .article {
+    margin: 10px 0;
+    text-align: center;
+  }
+  .roww {
+    flex-direction: column;
+    margin: 10px 0;
+  }
+  .article {
+    display: flex;
+    flex-direction: column;
+  }
+  .article h3 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    order: 0;
+  }
+  .article img {
+    order: 3;
+  }
+  footer {
+    display: none;
+  }
+}
